--- a/app/src/main/res/layout/dialog_list_search.xml
+++ b/app/src/main/res/layout/dialog_list_search.xml
@@ -2,26 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/windowBackground"
     android:orientation="vertical">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/creditCardBackground"
+        android:background="@color/colorPrimary"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/dialog_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/josefin_sans"
             android:text="@string/product_category"
             android:textColor="@color/white"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:gravity="center"/>
 
     </LinearLayout>
 
@@ -63,7 +65,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -71,13 +72,14 @@
             android:id="@+id/dialog_button"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@color/creditCardBackground"
+            android:background="@color/colorPrimary"
             android:fontFamily="@font/josefin_sans"
             android:text="@string/cancel"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
