--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -66,13 +66,11 @@
 
 
 
-                    <EditText
+                    <AutoCompleteTextView
                         android:id="@+id/etxt_product_manufucturer"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@drawable/edittext_corner"
-                        android:drawableRight="@drawable/ic_add_circle"
-                        android:fontFamily="@font/josefin_sans"
                         android:inputType="textCapWords"
                         android:padding="10dp"
                         android:layout_marginBottom="10dp"/>
@@ -93,13 +91,11 @@
                         android:textColor="@color/textColorSecondaryLight"
                         android:textSize="16sp" />
 
-                    <EditText
+                    <AutoCompleteTextView
                         android:id="@+id/etxt_product_category"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@drawable/edittext_corner"
-                        android:drawableRight="@drawable/ic_add_circle"
-                        android:fontFamily="@font/josefin_sans"
                         android:inputType="textCapWords"
                         android:padding="10dp"
                         android:layout_marginBottom="10dp"/>
@@ -126,13 +122,11 @@
                         android:textSize="16sp" />
 
 
-                    <EditText
+                    <AutoCompleteTextView
                         android:id="@+id/etxt_product_name"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@drawable/edittext_corner"
-                        android:drawableRight="@drawable/ic_add_circle"
-                        android:fontFamily="@font/josefin_sans"
                         android:inputType="textCapWords"
                         android:padding="10dp"
                         android:layout_marginBottom="10dp"/>
