--- a/app/src/main/res/layout/layout_poultry_form.xml
+++ b/app/src/main/res/layout/layout_poultry_form.xml
@@ -275,12 +275,14 @@
                     android:layout_marginBottom="4dp"
                     android:text="@string/expected_disposal"
                     android:textSize="@dimen/dimen_16sp" />
-                <EditText
+                <TextView
                     android:id="@+id/et_poultry_expected_disposal"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:padding="@dimen/dimen_10dp"
-                    android:background="@drawable/edittext_corner" />
+                    android:background="@drawable/edittext_corner"
+                    android:drawableEnd="@drawable/ic_baseline_date_range_24" />
+
 
 
             </LinearLayout>
